# stella-workflow

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  pyproject.toml  pytest.ini
.github/workflows/: python-lint.yml  python-publish.yml  python-test.yml
docs/: CORE_AGENT.md
examples/conditions/: example_document_processor_results_20250306_233547.json  processor.py  requirements.txt
examples/loops/: README.md  email_campaign_results_20250307_001349.json  email_processor.py
examples/memory_management/: README_state_memory.md  example_alert_manager_output_20250305_122255.json  state_memory_pipeline.py
examples/message_flow/: README.md  data_processing_pipeline.py  example_invalid_records_20250305_021707.json  example_processed_data_20250309_163247.json  example_valid_records_20250305_021707.json
examples/multiple_producers/: README.md  event_aggregation.py  example_notifications_20250305_024244.json
stella_workflow/: __init__.py  loop.py  utils.py  workflow.py
stella_workflow/brokers/: __init__.py  base.py  redis_broker.py
tests/: conftest.py  llm_implementations.py  test_conditions.py  test_loops.py  test_memory_management.py  test_message_flow.py  test_multiple_producers.py  test_redis_broker.py
